--- a/features/movies/src/main/res/layout/item_movie_list.xml
+++ b/features/movies/src/main/res/layout/item_movie_list.xml
@@ -25,6 +25,7 @@
 
     <TextView
         android:id="@+id/item_movie_title"
+        style="@style/MovieTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -36,6 +37,7 @@
 
     <TextView
         android:id="@+id/item_movie_eng_title"
+        style="@style/MovieTitle.Original"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -47,10 +49,10 @@
 
     <TextView
         android:id="@+id/item_movie_genres"
+        style="@style/TitleGenres"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/item_movie_title"
@@ -59,6 +61,7 @@
 
     <TextView
         android:id="@+id/item_movie_vote_average"
+        style="@style/TitleVoteAverage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
@@ -72,6 +75,7 @@
 
     <TextView
         android:id="@+id/item_movie_popularity"
+        style="@style/TitleRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
@@ -80,14 +84,14 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/item_movie_vote_average"
         app:layout_constraintTop_toTopOf="@+id/item_movie_vote_average"
+        app:layout_constraintVertical_bias="0.8"
         tools:text="4 832" />
 
     <ImageView
         android:id="@+id/item_movie_duration_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/item_movie_time_icon_size"
+        android:layout_height="@dimen/item_movie_time_icon_size"
         android:layout_marginEnd="6dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/item_movie_duration_title"
         app:layout_constraintEnd_toStartOf="@+id/item_movie_duration_title"
         app:layout_constraintTop_toTopOf="@+id/item_movie_duration_title"
@@ -97,7 +101,7 @@
         android:id="@+id/item_movie_duration_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
+        style="@style/TitleDuration"
         app:layout_constraintBottom_toBottomOf="@+id/item_movie_vote_average"
         app:layout_constraintEnd_toEndOf="@+id/item_movie_genres"
         app:layout_constraintTop_toTopOf="@+id/item_movie_vote_average"
