--- a/features/movies/src/main/res/values/styles.xml
+++ b/features/movies/src/main/res/values/styles.xml
@@ -24,4 +24,34 @@
         <item name="android:overScrollMode">never</item>
     </style>
 
+    <style name="MovieTitle">
+        <item name="android:textAppearance">@style/Medium</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:lines">1</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="MovieTitle.Original">
+        <item name="android:textAppearance">@style/Regular</item>
+        <item name="android:textSize">@dimen/text_size_small</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="TitleGenres" parent="MovieTitle.Original">
+        <item name="android:textColor">@color/light</item>
+    </style>
+
+    <style name="TitleVoteAverage" parent="MovieTitle">
+
+    </style>
+
+    <style name="TitleRating" parent="MovieTitle.Original">
+
+    </style>
+
+    <style name="TitleDuration" parent="MovieTitle.Original">
+        <item name="android:textColor">@color/light</item>
+    </style>
+
 </resources>
