--- a/features/movies/src/main/res/layout/item_movie_grid.xml
+++ b/features/movies/src/main/res/layout/item_movie_grid.xml
@@ -90,6 +90,7 @@
         android:layout_width="@dimen/item_movie_time_icon_size"
         android:layout_height="@dimen/item_movie_time_icon_size"
         android:layout_marginEnd="6dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/item_movie_vote_average"
         app:layout_constraintEnd_toStartOf="@+id/item_movie_duration_title"
         app:layout_constraintTop_toTopOf="@+id/item_movie_vote_average"
@@ -102,6 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/item_movie_duration_image"
         app:layout_constraintEnd_toEndOf="@+id/item_movie_image"
         app:layout_constraintHorizontal_bias="1.0"
