--- a/features/movies/src/main/res/layout/fragment_movie.xml
+++ b/features/movies/src/main/res/layout/fragment_movie.xml
@@ -1,16 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <FrameLayout
+        android:id="@+id/movie_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:paddingStart="@dimen/default_content_margin"
+        android:paddingEnd="@dimen/default_content_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/movie_back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|center"
+            android:layout_marginStart="6dp"
+            android:src="@drawable/ic_arrow_back"
+            android:tint="@color/search_appbar_icons_color"
+            tools:ignore="ContentDescription" />
+
+        <ImageView
+            android:id="@+id/movie_favorite_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end|center"
+            android:layout_marginEnd="6dp"
+            android:src="@drawable/ic_favorite_border"
+            android:tint="@color/search_appbar_icons_color"
+            android:visibility="invisible"
+            tools:ignore="ContentDescription"
+            tools:visibility="visible" />
+
+    </FrameLayout>
+
+    <ImageView
+        android:id="@+id/movie_image"
+        android:layout_width="@dimen/item_movie_list_image_width"
+        android:layout_height="@dimen/item_movie_list_image_height"
+        android:layout_marginStart="@dimen/default_content_margin"
+        android:layout_marginTop="@dimen/default_content_margin"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/movie_appbar"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="ContentDescription"
+        tools:src="@drawable/ic_poster_placeholder" />
+
     <TextView
-        android:id="@+id/movie_name_title"
-        android:textAppearance="@style/Medium"
+        android:id="@+id/movie_title"
+        style="@style/MovieTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/default_content_margin"
+        android:layout_marginEnd="@dimen/default_content_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/movie_image"
+        app:layout_constraintTop_toTopOf="@+id/movie_image"
+        tools:text="Удивительное путешествие до..." />
+
+    <TextView
+        android:id="@+id/movie_original_title"
+        style="@style/MovieTitle.Original"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="@dimen/default_content_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/movie_title"
+        app:layout_constraintTop_toBottomOf="@+id/movie_title"
+        tools:text="Dolittle (2020)" />
+
+    <TextView
+        android:id="@+id/movie_genres"
+        style="@style/TitleGenres"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="@dimen/default_content_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/movie_title"
+        app:layout_constraintTop_toBottomOf="@+id/movie_original_title"
+        tools:text="фэнтези, боевик, комедия" />
+
+    <TextView
+        android:id="@+id/movie_vote_average"
+        style="@style/TitleVoteAverage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="@dimen/text_size_big"
-        tools:text="Movie" />
+        app:layout_constraintBottom_toBottomOf="@+id/movie_duration"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/movie_genres"
+        app:layout_constraintTop_toBottomOf="@+id/move_time_title"
+        tools:text="6.1" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/movie_popularity"
+        style="@style/TitleRating"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="@dimen/default_content_margin"
+        app:layout_constraintBottom_toBottomOf="@+id/movie_vote_average"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/movie_vote_average"
+        app:layout_constraintTop_toTopOf="@+id/movie_vote_average"
+        app:layout_constraintVertical_bias="0.8"
+        tools:text="4 832" />
+
+    <TextView
+        android:id="@+id/move_time_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/default_content_margin"
+        android:layout_marginTop="16dp"
+        android:text="@string/title_time"
+        app:layout_constraintEnd_toStartOf="@+id/movie_rating_title"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/movie_image" />
+
+    <TextView
+        android:id="@+id/movie_duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/default_content_margin"
+        app:layout_constraintEnd_toStartOf="@+id/movie_vote_average"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/move_time_title"
+        tools:text="91Мин" />
+
+    <TextView
+        android:id="@+id/movie_rating_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/default_content_margin"
+        android:text="@string/title_movie_rating"
+        app:layout_constraintBottom_toBottomOf="@+id/move_time_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/movie_genres"
+        app:layout_constraintTop_toTopOf="@+id/move_time_title" />
+
+    <View
+        android:id="@+id/movie_separator"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/movie_duration" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
