Обновить разметку для поиска

--- a/features/movies/src/main/res/layout/include_search.xml
+++ b/features/movies/src/main/res/layout/include_search.xml
@@ -34,8 +34,8 @@
 
         <ImageView
             android:id="@+id/search_change_view_type_image"
-            android:layout_width="@dimen/appbar_icon_size"
-            android:layout_height="@dimen/appbar_icon_size"
+            android:layout_width="@dimen/default_icon_size"
+            android:layout_height="@dimen/default_icon_size"
             android:layout_gravity="center"
             android:src="@drawable/ic_movies_card"
             android:tint="@color/search_appbar_icons_color"
