--- a/features/movies/src/main/res/layout/fragment_movie.xml
+++ b/features/movies/src/main/res/layout/fragment_movie.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="@dimen/default_content_margin"
-        android:visibility="invisible"
-        tools:visibility="visible" />
+        android:visibility="visible"
+        tools:visibility="invisible" />
 
 </FrameLayout>
