--- a/features/movies/src/main/res/layout/include_movie_appbar.xml
+++ b/features/movies/src/main/res/layout/include_movie_appbar.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="start|center"
         android:layout_marginStart="6dp"
         android:background="?selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_arrow_back"
+        android:src="@drawable/ic_arrow_left"
         android:tint="@color/search_appbar_icons_color"
         tools:ignore="ContentDescription" />
 
@@ -31,8 +31,6 @@
         android:background="?selectableItemBackgroundBorderless"
         android:src="@drawable/ic_favorite_border"
         android:tint="@color/search_appbar_icons_color"
-        android:visibility="invisible"
-        tools:ignore="ContentDescription"
-        tools:visibility="visible" />
+        tools:ignore="ContentDescription" />
 
 </FrameLayout>
