--- a/features/movies/src/main/res/layout/item_movie_grid.xml
+++ b/features/movies/src/main/res/layout/item_movie_grid.xml
@@ -83,6 +83,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/item_movie_vote_average"
         app:layout_constraintStart_toEndOf="@+id/item_movie_vote_average"
         app:layout_constraintTop_toTopOf="@+id/item_movie_vote_average"
+        app:layout_constraintVertical_bias="1.0"
         tools:text="4 832" />
 
     <ImageView
