--- a/features/movies/src/main/res/layout/fragment_movie.xml
+++ b/features/movies/src/main/res/layout/fragment_movie.xml
@@ -20,7 +20,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <include layout="@layout/include_movie_info" />
+            <include
+                android:id="@+id/movie_info"
+                layout="@layout/include_movie_info" />
 
             <View
                 android:id="@+id/movie_separator"
@@ -33,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/default_content_margin"
+                android:textAppearance="@style/Regular"
                 tools:text="Семь лет назад доктор Дулиттл, прославленный врач-ветеринар, живущий в викторианской Англии, потерял свою жену. Теперь он ведет затворнический образ жизни, скрывшись за высокими стенами своего поместья. Экзотические животные из его коллекции — его единственная компания. Но когда неизвестная болезнь становится угрозой для жизни юной королевы, доктору Дулиттлу приходится покинуть свое убежище и отправиться в невероятное путешествие к мифическому острову. В поисках лекарства для королевы он вступит в схватку с беспощадными врагами, познакомится с диковинными существами и будет вынужден проявить недюжинное мужество и смекалку." />
 
         </LinearLayout>
