--- a/features/movies/src/main/res/layout/include_movie_info.xml
+++ b/features/movies/src/main/res/layout/include_movie_info.xml
@@ -23,7 +23,7 @@
 
     <TextView
         android:id="@+id/movie_title"
-        style="@style/MovieTitle"
+        style="@style/MovieTitle.Expand"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_content_margin"
@@ -36,7 +36,7 @@
 
     <TextView
         android:id="@+id/movie_original_title"
-        style="@style/MovieTitle.Original"
+        style="@style/MovieTitle.Original.Expand"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -51,13 +51,15 @@
         android:id="@+id/movie_genres"
         style="@style/TitleGenres"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="@dimen/default_content_margin"
+        app:layout_constraintBottom_toBottomOf="@+id/movie_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/movie_title"
         app:layout_constraintTop_toBottomOf="@+id/movie_original_title"
+        app:layout_constraintVertical_bias="0.0"
         tools:text="фэнтези, боевик, комедия" />
 
     <TextView
@@ -69,7 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/movie_genres"
-        app:layout_constraintTop_toBottomOf="@+id/move_time_title"
+        app:layout_constraintTop_toBottomOf="@+id/movie_rating_title"
         tools:text="6.1" />
 
     <TextView
@@ -92,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_content_margin"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/default_content_margin"
         android:text="@string/title_time"
         app:layout_constraintEnd_toStartOf="@+id/movie_rating_title"
         app:layout_constraintHorizontal_bias="0.0"
@@ -101,6 +103,7 @@
 
     <TextView
         android:id="@+id/movie_duration"
+        style="@style/TitleDuration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_content_margin"
@@ -110,7 +113,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/move_time_title"
-        tools:text="91Мин" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:text="91 мин" />
 
     <TextView
         android:id="@+id/movie_rating_title"
