--- a/features/movies/src/main/res/values/styles.xml
+++ b/features/movies/src/main/res/values/styles.xml
@@ -32,10 +32,23 @@
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="MovieTitle.Expand" parent="MovieTitle">
+        <item name="android:ellipsize">none</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:lines">1</item>
+        <item name="android:singleLine">false</item>
+    </style>
+
     <style name="MovieTitle.Original">
         <item name="android:textAppearance">@style/Regular</item>
         <item name="android:textSize">@dimen/text_size_small</item>
         <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="MovieTitle.Original.Expand" parent="MovieTitle.Original">
+        <item name="android:maxLines">2</item>
+        <item name="android:lines">1</item>
+        <item name="android:singleLine">false</item>
     </style>
 
     <style name="TitleGenres" parent="MovieTitle.Original">
@@ -51,6 +64,7 @@
     </style>
 
     <style name="TitleDuration" parent="MovieTitle.Original">
+        <item name="android:textSize">@dimen/text_size_regular</item>
         <item name="android:textColor">@color/light</item>
     </style>
 
